Rapid Prd/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Juice1__c</fullName>
        <formula>37.5*(Function_A__c + Function_B__c)+12.5*(Function_C__c + Function_D__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Juice1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Juice2__c</fullName>
        <formula>25*(Function_A__c + Function_B__c)+25*(Function_C__c + Function_D__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Juice2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Juice3__c</fullName>
        <formula>12.5*(Function_A__c + Function_B__c)+37.5*(Function_C__c + Function_D__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Juice3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Keyword_Match_Type__c</fullName>
        <label>Keyword Match Type</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_NumId__c</fullName>
        <description>Numeric Id to enhance indexing and data chunking during backups and integration with external systems.</description>
        <displayFormat>{00000000}</displayFormat>
        <inlineHelpText>Numeric Id to enhance indexing and data chunking during backups and integration with external systems.</inlineHelpText>
        <label>LD NumId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LSP_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LSP Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landlord_Agent_Name__c</fullName>
        <label>Landlord/Agent Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Landlord_Agent_Phone_Number__c</fullName>
        <label>Landlord/Agent Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_3_Months_Avg_Credit_Card_Processing__c</fullName>
        <label>Last 3 Months Avg Credit Card Processing</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_Activity__c</fullName>
        <description>Records the date/time of the last time a Five9 call has been logged against the lead</description>
        <label>Last Call Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Five9_Disposition__c</fullName>
        <label>Last Five9 Disposition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Five9_List__c</fullName>
        <description>Stores the ID for the last Five9 list</description>
        <label>Last Five9 List</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Text_Activity__c</fullName>
        <label>Last Text Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_User_Activity__c</fullName>
        <description>Captures the Date and Time of the User&apos;s Last Activity (Based on Last Task logged by User)</description>
        <label>Last User Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadCount__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadID_Audit__c</fullName>
        <description>This field stores the unique id for all leads from the lead generation partners. The value is passed to us from LeadID</description>
        <label>LeadID Audit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadId18Char__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadId18Char</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOwnerFax__c</fullName>
        <formula>Owner:User.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOwnerID_Full__c</fullName>
        <formula>CASESAFEID(OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner ID (Full)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOwnerID__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadOwnerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Age_minutes__c</fullName>
        <formula>(NOW()- Lead_Created_Date__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Age_trigger__c</fullName>
        <formula>IF( OR( ISPICKVAL(  Status , &quot;Calling - No Contact Made&quot;), ISPICKVAL( Status , &quot;Follow Up Call Needed&quot;), ISPICKVAL(Status , &quot;Initial Call Needed&quot;),ISPICKVAL( Status, &quot;Awaiting Credit Card Statements&quot;) ) , 0, 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age trigger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Country__c</fullName>
        <formula>IF( OR(State =  &quot;Alberta&quot; ,State =  &quot;Ontario&quot; ,State =  &quot;Nunavut&quot; ,State =  &quot;Nova Scotia&quot; ,State =  &quot;Newfoundland and Labrador&quot; ,State =  &quot;New Brunswick&quot; ,State =  &quot;Manitoba&quot; ,State =  &quot;British Columbia&quot;,State =  &quot;Quebec&quot; ,State =  &quot;Saskatchewan&quot; ,State =  &quot;Yukon&quot;, State=&quot;AB&quot;, State=&quot;BC&quot;, State=&quot;MB&quot;, State=&quot;NB&quot;, State=&quot;NL&quot;, State=&quot;NS&quot;, State=&quot;ON&quot;, State=&quot;PE&quot;, State=&quot;QC&quot;, State=&quot;SK&quot;, State=&quot;NT&quot;, State=&quot;NU&quot;, State=&quot;YT&quot;) , &quot;Canada&quot;,&quot;USA&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Create_Date__c</fullName>
        <formula>TEXT(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Create Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Level__c</fullName>
        <label>Lead Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - New Live Lead</fullName>
                </value>
                <value>
                    <fullName>2 - Called Lead; Not Contact Yet</fullName>
                </value>
                <value>
                    <fullName>3 - Made Contact; Need to Follow Up</fullName>
                </value>
                <value>
                    <fullName>4 - Lead Interested; Submitting CC Stmnts</fullName>
                </value>
                <value>
                    <fullName>5 - Rec&apos;d CC Stmnts; Preparing Quote</fullName>
                </value>
                <value>
                    <fullName>6 - Quote Submitted; Waiting On Approval</fullName>
                </value>
                <value>
                    <fullName>7 - Quote Approved; Lead ok to Convert</fullName>
                </value>
                <value>
                    <fullName>8 - Future Possibility for Business</fullName>
                </value>
                <value>
                    <fullName>9 - No Future Possibility for Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Monetization_Amount_Sold__c</fullName>
        <description>The total loan / MCA amount sold to the lead</description>
        <label>Lead Monetization Amount Sold</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Monetization_Deal_Term__c</fullName>
        <description>The term of the monetized lead deal.</description>
        <inlineHelpText>The number of months for our Lead Mon Deal</inlineHelpText>
        <label>Lead Monetization Deal Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Monetization_Funded_Date__c</fullName>
        <description>Date that our partner funded the lead</description>
        <label>Lead Monetization Funded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Monetization_Partner__c</fullName>
        <description>List of potential partners for lead monetization</description>
        <label>Lead Monetization Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anovia</fullName>
                </value>
                <value>
                    <fullName>Capital Source Group</fullName>
                </value>
                <value>
                    <fullName>Crowdnetic</fullName>
                </value>
                <value>
                    <fullName>International Bancard</fullName>
                </value>
                <value>
                    <fullName>Lendio</fullName>
                </value>
                <value>
                    <fullName>Maxim</fullName>
                </value>
                <value>
                    <fullName>RocketLoans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <description>Needed for Round Robin Lead Assignment</description>
        <displayFormat>{00000}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Fax__c</fullName>
        <defaultValue>$User.Fax</defaultValue>
        <description>Fax number of the lead owner.</description>
        <label>Lead Owner Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Text__c</fullName>
        <label>Lead Owner (Text)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Business_Name__c</fullName>
        <label>Legal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lendio_Id__c</fullName>
        <label>Lendio Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lendio_Payment__c</fullName>
        <label>Lendio Payment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lendio_Processing_Message__c</fullName>
        <label>Lendio Processing Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lendio_Timestamp__c</fullName>
        <label>Lendio Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lendio_URL__c</fullName>
        <label>Lendio URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LengthOfPhone__c</fullName>
        <formula>Len(Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LengthOfPhone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_1_Address__c</fullName>
        <label>Location 5 Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_1_DBA_NAME__c</fullName>
        <label>Location 5 DBA NAME:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_1_Fax_Number__c</fullName>
        <label>Location 5 Fax Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_1_Landlord_Contact_Name__c</fullName>
        <label>Location 5 Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_1_Landlord_Phone_Number__c</fullName>
        <label>Location 5 Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_1_Phone_Number__c</fullName>
        <label>Location 5 Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Address__c</fullName>
        <label>Location 2 Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_2_DBA_NAME__c</fullName>
        <label>Location 2 DBA NAME:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_2_Fax_Number__c</fullName>
        <label>Location 2 Fax Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Landlord_Contact_Name__c</fullName>
        <label>Location 2 Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_2_Landlord_Phone_Number__c</fullName>
        <label>Location 2 Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Phone_Number__c</fullName>
        <label>Location 2 Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Time_Remaining_On_The_Lease__c</fullName>
        <label>Location 2: Time Remaining On The Lease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 6 months</fullName>
                </value>
                <value>
                    <fullName>7 - 11 months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 years +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_3_Address__c</fullName>
        <label>Location 3 Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_3_DBA_NAME__c</fullName>
        <label>Location 3 DBA NAME:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_3_Fax_Number__c</fullName>
        <label>Location 3 Fax Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_3_Landlord_Contact_Name__c</fullName>
        <label>Location 3 Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_3_Landlord_Phone_Number__c</fullName>
        <label>Location 3 Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_3_Phone_Number__c</fullName>
        <label>Location 3 Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_3_Time_Remaining_On_The_Lease__c</fullName>
        <label>Location 3: Time Remaining On The Lease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 6 months</fullName>
                </value>
                <value>
                    <fullName>7 - 11 months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 years +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_4_Time_Remaining_On_The_Lease__c</fullName>
        <label>Location 4: Time Remaining On The Lease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 6 months</fullName>
                </value>
                <value>
                    <fullName>7 - 11 months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 years +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MI_Score__c</fullName>
        <label>MI Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field Creation Incident #36049 and map to Contact &quot;Mail Opt Out&quot; on conversion</description>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marble__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marble</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marin_ID__c</fullName>
        <label>Marin ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Score__c</fullName>
        <formula>IF( AND( Gross_Monthly_Sales_Cur__c &gt;= 60000,(TODAY() -  DateBusinessStarted__c  ) &gt;= 1825) , 100, 
IF( AND( Gross_Monthly_Sales_Cur__c &gt;= 60000,OR((TODAY() - DateBusinessStarted__c ) &lt; 1825,ISBLANK(DateBusinessStarted__c))) ,90, 
IF( AND( Gross_Monthly_Sales_Cur__c &gt;= 30000,Gross_Monthly_Sales_Cur__c &lt; 60000,(TODAY() - DateBusinessStarted__c ) &gt;= 1825), 80, 
IF( AND( Gross_Monthly_Sales_Cur__c &gt;= 30000,Gross_Monthly_Sales_Cur__c &lt; 60000,OR((TODAY() - DateBusinessStarted__c ) &lt; 1825,ISBLANK(DateBusinessStarted__c))) , 70, 
IF( AND( Gross_Monthly_Sales_Cur__c &gt;= 15000,Gross_Monthly_Sales_Cur__c &lt; 30000,(TODAY() - DateBusinessStarted__c ) &gt;= 1825), 60, 
IF( AND( Gross_Monthly_Sales_Cur__c &gt;= 15000,Gross_Monthly_Sales_Cur__c &lt; 30000,OR((TODAY() - DateBusinessStarted__c ) &lt; 1825,ISBLANK(DateBusinessStarted__c))) , 50, 
IF( AND( Gross_Monthly_Sales_Cur__c &gt;= 10000,Gross_Monthly_Sales_Cur__c &lt; 15000,(TODAY() - DateBusinessStarted__c) &gt;= 1825), 40, 
IF( AND( Gross_Monthly_Sales_Cur__c &gt;= 10000,Gross_Monthly_Sales_Cur__c &lt; 15000,OR((TODAY() - DateBusinessStarted__c ) &lt; 1825,ISBLANK(DateBusinessStarted__c))) , 30, 
IF( AND( Gross_Monthly_Sales_Cur__c &gt;= 3163, Gross_Monthly_Sales_Cur__c &lt; 10000) , 20, 
IF( OR(Gross_Monthly_Sales_Cur__c &lt; 3163, OR((TODAY() - DateBusinessStarted__c ) &lt; 317),ISBLANK(DateBusinessStarted__c)) ,10
,55 
))))))))))</formula>
        <label>Marketing Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merchant_ID_Number__c</fullName>
        <label>Merchant ID Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mini_Application_Submitted__c</fullName>
        <label>Mini Application Submitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Missing_Items__c</fullName>
        <formula>&quot;The Following Items are Missing:&quot; &amp; BR()
&amp; If( ISblank( Federal_Tax_ID_Number__c ), &quot;- Federal Tax ID&quot; &amp; BR(),&quot;&quot; )
&amp; If( ISblank( Social_Security_Number__c ), &quot;- Principal 1 Social Security Number&quot; &amp; BR(),&quot;&quot; )
&amp; If( ISblank(  Date_Of_Birth__c  ), &quot;- Principal 1 Date of Birth&quot; &amp; BR(),&quot;&quot; )
&amp; If( ISblank( Number_of_Locations__c  ), &quot;- Number of Locations&quot; &amp; BR(),&quot;&quot; )
&amp; If( ISblank( Landlord_Agent_Name__c ), &quot;- Landlord Name&quot; &amp; BR(),&quot;&quot; )
&amp; If( ISblank( Landlord_Agent_Phone_Number__c  ), &quot;- Landlord Phone&quot;,&quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Items</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mkt_Channels__c</fullName>
        <formula>case(LeadSource,&quot;Web-To-Lead&quot;,&quot;Internet&quot;,&quot;Other&quot;,&quot;Internet&quot;,&quot;Web-Call-In&quot;,&quot;Internet&quot;,&quot;Spanish Web-To-Lead&quot;,&quot;Internet&quot;,&quot;Quancor - HOT LEAD&quot;,&quot;TM&quot;,&quot;Quancor&quot;,&quot;TM&quot;,&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Channels</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mkt_Month__c</fullName>
        <formula>text (Month(  DATEVALUE(CreatedDate) ))&amp;&quot;/&quot;&amp;text(Year( DATEVALUE(CreatedDate) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mktg_Reminder__c</fullName>
        <formula>If(ISPICKVAL(  Status , &quot;Initial Call Needed&quot;) , IMAGE(&quot;https://na5.salesforce.com/servlet/servlet.FileDownload?file=01570000000nx5H&quot;, &quot;Lead Status is Initial Call Needed&quot;),&quot;No Data is required&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mktg Reminder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monetized_Commissions__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This is the Rapid commission from our partner.</description>
        <label>Lead Monetization Commissions</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_of_Business_Eligible_Date__c</fullName>
        <formula>CASE(MONTH( Business_Eligible_Date__c) , 1, &apos;January&apos;, 2, &apos;February&apos;,3,&apos;March&apos;,4,&apos;April&apos;,5,&apos;May&apos;,6,&apos;June&apos;,7,&apos;July&apos;,8,&apos;August&apos;,9,&apos;September&apos;,10,&apos;October&apos;,11,&apos;November&apos;,12,&apos;December&apos;,Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month of Business Eligible Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Credit_Card_Sales__c</fullName>
        <label>Monthly Credit Card Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Salary__c</fullName>
        <label>Monthly Gross Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Visa_Mastercard_Volume__c</fullName>
        <label>Monthly Visa/Mastercard Sales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does Not Accept Visa/MC</fullName>
                </value>
                <value>
                    <fullName>0 - 2,500</fullName>
                </value>
                <value>
                    <fullName>2,500 - 5,000</fullName>
                </value>
                <value>
                    <fullName>3,500 - 5,000</fullName>
                </value>
                <value>
                    <fullName>5,000 - 10,000</fullName>
                </value>
                <value>
                    <fullName>10,000 - 20,000</fullName>
                </value>
                <value>
                    <fullName>20,000 - 40,000</fullName>
                </value>
                <value>
                    <fullName>40,000 - 60,000</fullName>
                </value>
                <value>
                    <fullName>60,000 - 80,000</fullName>
                </value>
                <value>
                    <fullName>80,000 - 100,000</fullName>
                </value>
                <value>
                    <fullName>100,000 +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Volume_Ins_Type_1__c</fullName>
        <label>Monthly Volume (Ins Type 1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Volume_Ins_Type_2__c</fullName>
        <label>Monthly Volume (Ins Type 2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Volume_Ins_Type_3__c</fullName>
        <label>Monthly Volume (Ins Type 3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_gross_revenue_greater_than_5k__c</fullName>
        <description>Used to capture data regarding gross monthly sales for leads from Rock Connections</description>
        <label>Monthly gross revenue greater than $5k?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Months_Remaining_On_Site_Lease_Mortgage__c</fullName>
        <label>Time Remaining On Site Lease/Mortgage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Months_at_Current_Address__c</fullName>
        <label>Months at Current Address</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_at_Previous_Address__c</fullName>
        <label>Months at Previous Address</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_with_Current_Processor__c</fullName>
        <label>Months with Current Processor</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAICS__c</fullName>
        <label>NAICS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Bank_Personal__c</fullName>
        <label>Name of Bank (Personal)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Lead_Source__c</fullName>
        <label>New Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100% Paid Off</fullName>
                </value>
                <value>
                    <fullName>AAHOA - Post Card May 2008</fullName>
                </value>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Ameridial</fullName>
                </value>
                <value>
                    <fullName>Auto Dialer</fullName>
                </value>
                <value>
                    <fullName>Barrata Web To Lead</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Direct Mail DMCK1106</fullName>
                </value>
                <value>
                    <fullName>Direct Mail DMCK406</fullName>
                </value>
                <value>
                    <fullName>Direct Mail DMCK 506</fullName>
                </value>
                <value>
                    <fullName>Direct Mail DMPTM 0506</fullName>
                </value>
                <value>
                    <fullName>Email Campaign</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Experian List</fullName>
                </value>
                <value>
                    <fullName>ExpertServ</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Internet Search</fullName>
                </value>
                <value>
                    <fullName>Mercury Statement Insert</fullName>
                </value>
                <value>
                    <fullName>Mini Web-to-Lead</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>NXGEN - Quancor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Post Card #2 51206</fullName>
                </value>
                <value>
                    <fullName>Post Card 51206</fullName>
                </value>
                <value>
                    <fullName>Post Card DMP 2406</fullName>
                </value>
                <value>
                    <fullName>Post Card DMPC 506</fullName>
                </value>
                <value>
                    <fullName>POSTCARD - GENERAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Partner_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Partner Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Reps__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>No. of Reps</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_reps_to_train__c</fullName>
        <label>No. of reps to train?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Interested_Count__c</fullName>
        <formula>if(OR( ISPICKVAL( Status , &quot;Not Interested&quot;),ISPICKVAL( Status , &quot;DO NOT CALL&quot;),ISPICKVAL( Status , &quot;Requested Information Only&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Interested Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>